Fixed problems highlighted by Intellij in backend classes